style: fix z-index issue

--- a/apps/admin/src/styles/global.scss
+++ b/apps/admin/src/styles/global.scss
@@ -253,3 +253,6 @@ input[type="checkbox"].tobiratory-checkbox:checked {
   color: white;
 }
 
+.custom-datepicker-popper {
+  z-index: 10 !important;
+}
